--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 
     <div id='top' class='top-container'>
-      <h1 class='top-name'>This is for the Creative Project 1</h1>
+      <h1 class='top-name'>This is for the Creative Project 1-change</h1>
     </div>
 
   </body>
