Layout and CSS grid set up 4:20pm

--- a/pages/cleaning-seasoning.html
+++ b/pages/cleaning-seasoning.html
@@ -6,7 +6,7 @@
   <link rel="stylesheet" href="/css/styles.css" />
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
   <meta name='viewport' content='width=device-width, initial-scale=1.0, maximum-scale=1.0' />
-  <title>Cast Iron Cookware</title>
+  <title>Cleaning and Seasoning</title>
 </head>
 
 <body>
@@ -18,7 +18,7 @@
     </button>
     <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
       <ul class="navbar-nav">
-        <li class="nav-item active">
+        <li class="nav-item">
           <a class="nav-link" href="/index.html">Home</a>
         </li>
         <li class="nav-item dropdown">
@@ -32,7 +32,7 @@
           </div>
         </li>
 
-        <li class="nav-item">
+        <li class="nav-item active">
           <a class="nav-link" href="/pages/cleaning-seasoning.html">Cleaning and Seasoning</a>
         </li>
       </ul>
@@ -41,7 +41,7 @@
 
   <div class="flex-container">
     <div id='top' class='top-container'>
-      <h1 class='top-name'>Home</h1>
+      <h1 class='top-name'>Cleaning and Seasoning</h1>
     </div>
   </div>
 
