--- a/pages/cookware/accessories.html
+++ b/pages/cookware/accessories.html
@@ -6,7 +6,7 @@
   <link rel="stylesheet" href="/css/styles.css" />
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
   <meta name='viewport' content='width=device-width, initial-scale=1.0, maximum-scale=1.0' />
-  <title>Cast Iron Cookware</title>
+  <title>Accessories</title>
 </head>
 
 <body>
@@ -18,10 +18,10 @@
     </button>
     <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
       <ul class="navbar-nav">
-        <li class="nav-item active">
+        <li class="nav-item">
           <a class="nav-link" href="/index.html">Home</a>
         </li>
-        <li class="nav-item dropdown">
+        <li class="nav-item dropdown active">
           <a class="nav-link dropdown-toggle" href="/pages/reviews-main.html" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
             Cookware
           </a>
@@ -41,13 +41,36 @@
 
   <div class="flex-container">
     <div id='top' class='top-container'>
-      <h1 class='top-name'>Home</h1>
+      <h1 class='top-name'>Accessories</h1>
     </div>
   </div>
 
   <div class="wrapper">
 
+    <div class="side-menu-products">
+      <div class="side-menu-items">
+        <div class="side-menu-link">
+          <a href="/pages/cookware/skillets-pans.html" class="side-menu-link-header">Skillets & Pans</a>
+        </div>
+      </div>
+      <div class="side-menu-items">
+        <div class="side-menu-link">
+          <a href="/pages/cookware/dutch-ovens.html" class="side-menu-link-header">Dutch Ovens</a>
+        </div>
+      </div>
+      <div class="side-menu-items active-product-page">
+        <div class="side-menu-link">
+          <a href="/pages/cookware/accessories.html" class="side-menu-link-header active-product-page">Accessories</a>
+        </div>
+      </div>
+    </div>
+
+    <div class="main-content-products">
+      main content
+    </div>
+
   </div>
+
 
   <nav class="footer fixed-bottom">
     <div class="container">
