--- a/pages/cookware/griddles.html
+++ b/pages/cookware/griddles.html
@@ -6,7 +6,7 @@
   <link rel="stylesheet" href="/css/styles.css" />
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
   <meta name='viewport' content='width=device-width, initial-scale=1.0, maximum-scale=1.0' />
-  <title>Cast Iron Cookware</title>
+  <title>Griddles and Other Favorites</title>
 </head>
 
 <body>
@@ -18,16 +18,17 @@
     </button>
     <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
       <ul class="navbar-nav">
-        <li class="nav-item active">
+        <li class="nav-item">
           <a class="nav-link" href="/index.html">Home</a>
         </li>
-        <li class="nav-item dropdown">
+        <li class="nav-item dropdown active">
           <a class="nav-link dropdown-toggle" href="/pages/reviews-main.html" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
             Cookware
           </a>
           <div class="dropdown-menu" aria-labelledby="navbarDropdown">
             <a class="dropdown-item" href="/pages/cookware/skillets-pans.html">Skillets & Pans</a>
             <a class="dropdown-item" href="/pages/cookware/dutch-ovens.html">Dutch Ovens</a>
+            <a class="dropdown-item" href="/pages/cookware/griddles.html">Griddles & Other Favorites</a>
             <a class="dropdown-item" href="/pages/cookware/accessories.html">Accessories</a>
           </div>
         </li>
@@ -35,19 +36,37 @@
         <li class="nav-item">
           <a class="nav-link" href="/pages/cleaning-seasoning.html">Cleaning and Seasoning</a>
         </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/pages/recipes-references.html">Recipes and Reference</a>
+        </li>
       </ul>
     </div>
   </nav>
 
-  <div class="flex-container">
-    <div id='top' class='top-container'>
-      <h1 class='top-name'>Home</h1>
-    </div>
+  <div id='top' class='top-container'>
+    <h1 class='top-name'>Griddles and Other Favorites</h1>
   </div>
 
   <div class="wrapper">
-
+    <div class="side-menu-products">
+      <div class="side-menu-items">
+        Skillets & Pans
+      </div>
+      <div class="side-menu-items">
+        Dutch Ovens
+      </div>
+      <div class="side-menu-items active-product-page">
+        Griddles
+      </div>
+      <div class="side-menu-items">
+        Accessories
+      </div>
+    </div>
+    <div class="main-content-products">
+      main content
+    </div>
   </div>
+
 
   <nav class="footer fixed-bottom">
     <div class="container">
