--- a/pages/recipes-references.html
+++ b/pages/recipes-references.html
@@ -6,7 +6,7 @@
   <link rel="stylesheet" href="/css/styles.css" />
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
   <meta name='viewport' content='width=device-width, initial-scale=1.0, maximum-scale=1.0' />
-  <title>Cast Iron Cookware</title>
+  <title>Recipes and References</title>
 </head>
 
 <body>
@@ -18,7 +18,7 @@
     </button>
     <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
       <ul class="navbar-nav">
-        <li class="nav-item active">
+        <li class="nav-item">
           <a class="nav-link" href="/index.html">Home</a>
         </li>
         <li class="nav-item dropdown">
@@ -28,6 +28,7 @@
           <div class="dropdown-menu" aria-labelledby="navbarDropdown">
             <a class="dropdown-item" href="/pages/cookware/skillets-pans.html">Skillets & Pans</a>
             <a class="dropdown-item" href="/pages/cookware/dutch-ovens.html">Dutch Ovens</a>
+            <a class="dropdown-item" href="/pages/cookware/griddles.html">Griddles & Other Favorites</a>
             <a class="dropdown-item" href="/pages/cookware/accessories.html">Accessories</a>
           </div>
         </li>
@@ -35,19 +36,20 @@
         <li class="nav-item">
           <a class="nav-link" href="/pages/cleaning-seasoning.html">Cleaning and Seasoning</a>
         </li>
+        <li class="nav-item active">
+          <a class="nav-link" href="/pages/recipes-references.html">Recipes and Reference</a>
+        </li>
       </ul>
     </div>
   </nav>
 
   <div class="flex-container">
     <div id='top' class='top-container'>
-      <h1 class='top-name'>Home</h1>
+      <h1 class='top-name'>Recipes and References</h1>
     </div>
   </div>
 
-  <div class="wrapper">
 
-  </div>
 
   <nav class="footer fixed-bottom">
     <div class="container">
