Layout complete 8:20pm

--- a/index.html
+++ b/index.html
@@ -41,12 +41,50 @@
 
   <div class="flex-container">
     <div id='top' class='top-container'>
-      <h1 class='top-name'>Home</h1>
+      <h1 class='top-name'>Cast Iron Cookware</h1>
     </div>
   </div>
 
-  <div class="wrapper">
-
+  <div class="wrapper-home">
+    <div class="home-group">
+      <div class="home-photo">
+        <a href="https://www.lodgemfg.com/benefits-cast-iron" target="_blank"><img src="/images/castironskillet.jpg" class="photo" alt=""></a>
+      </div>
+      <div class="home-content">
+        <div class="home-header">
+          Why Cast Iron?
+        </div>
+        <div class="home-text">
+          Text
+        </div>
+      </div>
+    </div>
+    <div class="home-group">
+      <div class="reverse-home-photo photo">
+        <a href="https://www.lodgemfg.com/" target="_blank"><img src="/images/logo.svg" class="photo" alt=""></a>
+      </div>
+      <div class="reverse-home-content">
+        <div class="home-header">
+          Why Lodge Cast Iron?
+        </div>
+        <div class="home-text">
+          Text
+        </div>
+      </div>
+    </div>
+    <div class="home-group">
+      <div class="home-photo photo">
+        <a href="https://www.dutchovendaddy.com" target="_blank"><img src="/images/dddaddy.png" class="photo" alt=""></a>
+      </div>
+      <div class="home-content">
+        <div class="home-header">
+          Recipies and References
+        </div>
+        <div class="home-text">
+          Text
+        </div>
+      </div>
+    </div>
   </div>
 
   <nav class="footer fixed-bottom">
