--- a/pages/cookware/accessories.html
+++ b/pages/cookware/accessories.html
@@ -66,9 +66,46 @@
     </div>
 
     <div class="main-content-products">
-      main content
+      <div class="main-content-group">
+        <div class="main-content-photo">
+          <a href="https://www.lodgemfg.com/chainmail-scrubbing-pad?sku=ACM10R41" target="_blank"><img src="/images/scrubbingpad.jpg" class="photo" alt=""></a>
+        </div>
+        <div class="main-content-item">
+          <div class="main-content-item-header">
+            Scrubbing Pad
+          </div>
+          <div class="main-content-item-text">
+            test
+          </div>
+        </div>
+      </div>
+      <div class="main-content-group">
+        <div class="main-content-photo">
+          <a href="https://www.lodgemfg.com/scrub-brush?sku=SCRBRSH" target="_blank"><img class="photo" src="/images/scrubbrush.jpg" alt=""></a>
+        </div>
+        <div class="main-content-item">
+          <div class="main-content-item-header">
+            Scrub Brush
+          </div>
+          <div class="main-content-item-text">
+            test
+          </div>
+        </div>
+      </div>
+      <div class="main-content-group">
+        <div class="main-content-photo">
+          <a href="https://buzzywaxx.com" target="_blank"><img class="photo" src="/images/buzzywaxx.jpg" alt=""></a>
+        </div>
+        <div class="main-content-item">
+          <div class="main-content-item-header">
+            BuzzyWaxx Seasoning
+          </div>
+          <div class="main-content-item-text">
+            test
+          </div>
+        </div>
+      </div>
     </div>
-
   </div>
 
 
