--- a/pages/cookware/dutch-ovens.html
+++ b/pages/cookware/dutch-ovens.html
@@ -65,9 +65,46 @@
     </div>
 
     <div class="main-content-products">
-      main content
+      <div class="main-content-group">
+        <div class="main-content-photo">
+          <a href="https://www.lodgemfg.com/dutch-oven?sku=L8DOL3" target="_blank"><img src="/images/dutchoven.jpg" class="photo" alt=""></a>
+        </div>
+        <div class="main-content-item">
+          <div class="main-content-item-header">
+            Oven Dutch Oven
+          </div>
+          <div class="main-content-item-text">
+            test
+          </div>
+        </div>
+      </div>
+      <div class="main-content-group">
+        <div class="main-content-photo">
+          <a href="https://www.lodgemfg.com/enameled-dutch-oven?sku=EC6D13" target="_blank"><img class="photo" src="/images/edutchoven.jpg" alt=""></a>
+        </div>
+        <div class="main-content-item">
+          <div class="main-content-item-header">
+            Enameled Dutch Oven
+          </div>
+          <div class="main-content-item-text">
+            test
+          </div>
+        </div>
+      </div>
+      <div class="main-content-group">
+        <div class="main-content-photo">
+          <a href="https://www.lodgemfg.com/camp-dutch-oven?sku=L12DCO3" target="_blank"><img class="photo" src="/images/campdutchoven.jpg" alt=""></a>
+        </div>
+        <div class="main-content-item">
+          <div class="main-content-item-header">
+            Camping Dutch Oven
+          </div>
+          <div class="main-content-item-text">
+            test
+          </div>
+        </div>
+      </div>
     </div>
-
   </div>
 
 
