--- a/pages/cookware/skillets-pans.html
+++ b/pages/cookware/skillets-pans.html
@@ -39,12 +39,11 @@
     </div>
   </nav>
 
-<div class="flex-container">
-  <div id='top' class='top-container'>
-    <h1 class='top-name'>Skillets & Pans</h1>
+  <div class="flex-container">
+    <div id='top' class='top-container'>
+      <h1 class='top-name'>Skillets & Pans</h1>
+    </div>
   </div>
-</div>
-
 
   <div class="wrapper">
 
@@ -67,8 +66,47 @@
     </div>
 
     <div class="main-content-products">
-      main content
+      <div class="main-content-group">
+        <div class="main-content-photo">
+          <a href="https://www.lodgemfg.com/round-cast-iron-classic-skillet?sku=L8SK3" target="_blank"><img src="/images/skillet.jpg" class="photo" alt=""></a>
+        </div>
+        <div class="main-content-item">
+          <div class="main-content-item-header">
+            Classic Skillets
+          </div>
+          <div class="main-content-item-text">
+            test
+          </div>
+        </div>
+      </div>
+      <div class="main-content-group">
+        <div class="main-content-photo">
+          <a href="https://www.lodgemfg.com/square-cast-iron-grill-pan?sku=L8SGP3" target="_blank"><img class="photo" src="/images/grillpan.jpg" alt=""></a>
+        </div>
+        <div class="main-content-item">
+          <div class="main-content-item-header">
+            Grill Pans
+          </div>
+          <div class="main-content-item-text">
+            test
+          </div>
+        </div>
+      </div>
+      <div class="main-content-group">
+        <div class="main-content-photo">
+          <a href="https://www.lodgemfg.com/fish-pan?sku=LLFP" target="_blank"><img class="photo" src="/images/fishpan.jpg" alt=""></a>
+        </div>
+        <div class="main-content-item">
+          <div class="main-content-item-header">
+            Dual Handed Pans
+          </div>
+          <div class="main-content-item-text">
+            test
+          </div>
+        </div>
+      </div>
     </div>
+  </div>
 
   </div>
 
