--- a/pages/cleaning-seasoning.html
+++ b/pages/cleaning-seasoning.html
@@ -45,10 +45,34 @@
     </div>
   </div>
 
-  <div class="wrapper">
-
+  <div class="wrapper-SS">
+    <div class="SS-group">
+      <div class="SS-photo">
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/gCePEY9x9H0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+      </div>
+      <div class="SS-content">
+        <div class="SS-header">
+          Cleaning
+        </div>
+        <div class="SS-text">
+          Text
+        </div>
+      </div>
+    </div>
+    <div class="SS-group">
+      <div class="reverse-SS-photo photo">
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/T2UZiIiqhDg" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+      </div>
+      <div class="reverse-SS-content">
+        <div class="SS-header">
+          Seaoning
+        </div>
+        <div class="SS-text">
+          Text
+        </div>
+      </div>
+    </div>
   </div>
-
   <nav class="footer fixed-bottom">
     <div class="container">
       <a class="footer-text" target="_blank" href="https://github.com/nvankatwyk/creative-project-1.git">GitHub Repository</a>
