Layout complete 9:05pm

--- a/pages/cleaning-seasoning.html
+++ b/pages/cleaning-seasoning.html
@@ -60,12 +60,12 @@
       </div>
     </div>
     <div class="SS-group">
-      <div class="reverse-SS-photo photo">
+      <div class="reverse-SS-photo">
         <iframe width="560" height="315" src="https://www.youtube.com/embed/T2UZiIiqhDg" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
       </div>
       <div class="reverse-SS-content">
         <div class="SS-header">
-          Seaoning
+          Seasoning
         </div>
         <div class="SS-text">
           Text
