--- a/index.html
+++ b/index.html
@@ -55,7 +55,11 @@
           Why Cast Iron?
         </div>
         <div class="home-text">
-          Text
+          <span>Cast iron pans are durable, versatile, easy to use and healthier. These pans are made to last a lifetime. The skillet you use to learn how to cook can be passed down all the way to your great-great-great grandson and work just as
+            well, if not better. You can cook just about anything with cast iron. With proper seasoning and cleaning, cast iron cookware has a naturally nonstick finish. With each use, you’ll get better and better performance. Cast iron doesn’t use
+            any chemicals to be nonstick, it only uses the layers of seasoning from years of use. Cast iron has great heat retention and heat transfer, so you can get the best sear, browning, or fry you’ve ever had. From skillets and dutch ovens to
+            griddles and cake pans, you can get a variety of cookware made from cast iron. You can use this cookware in the oven, stovetop, campfire, or grill. You can cook desserts, breakfast, lunch, or dinner.
+          </span>
         </div>
       </div>
     </div>
@@ -68,7 +72,10 @@
           Why Lodge Cast Iron?
         </div>
         <div class="home-text">
-          Text
+          <span>Lodge Cast Iron has been making cookware and accessories since 1896. They are the oldest and longest-running manufacturer in the United States. Lodge is based out in Pittsburg, Tennessee and make all of their cookware in their two
+            foundries right down the street from HQ. They pride themselves in their eco-responsible culture and their community centered mindset. The family and the company have been in the Pittsburg area for over 120 years. Lodge makes quality,
+            inexpensive, cookware that will last a lifetime. They hire local people to come work in their factories and they frequently host local gatherings and competitions with the people in the area. Why wouldn’t you want to support a company
+            like Lodge?</span>
         </div>
       </div>
     </div>
@@ -78,10 +85,16 @@
       </div>
       <div class="home-content">
         <div class="home-header">
-          Recipies and References
+          Recipes and References
         </div>
         <div class="home-text">
-          Text
+          <span>Here is a list of my favorite resources for recipes:</span>
+          <ul>
+            <li><a href="https://www.lodgemfg.com/recipes" target="_blank">Lodge's Recipes</a></li>
+            <li><a href="https://www.dutchovendaddy.com" target="_blank">Dutch Oven Daddy</a></li>
+            <li><a href="https://www.foodnetwork.com/topics/dutch-oven" target="_blank">Food Network</a></li>
+            <li><a href="https://www.tasteofhome.com" target="_blank">Taste of Home</a></li>
+          </ul>
         </div>
       </div>
     </div>
