--- a/pages/cleaning-seasoning.html
+++ b/pages/cleaning-seasoning.html
@@ -55,7 +55,14 @@
           Cleaning
         </div>
         <div class="SS-text">
-          Text
+          <ol>
+            <li>Wash your cast iron cookware by hand. You can use a small amount of soap for really greasy or stuck on foods, but no soap is usually best. Use a scrubbing pad or a scraper for the stuck-on foods. My favorite is to use the scrub brush
+              under running hot water.</li>
+            <li>Dry your cookware with a cloth or paper towel. If you plan on storing your cast iron, put in the oven at 200 F for 10-15 minutes to evaporate away any water that got into the pores of the metal.
+            </li>
+            <li>Rub a very light layer of BuzzyWaxx seasoning or cooking oil only the surface of the cookware. Then wipe away the surface until no oil residue remains. Store in a cool dry area until next use.
+            </li>
+          </ol>
         </div>
       </div>
     </div>
@@ -68,7 +75,16 @@
           Seasoning
         </div>
         <div class="SS-text">
-          Text
+          <ol>
+            <li>Heat up your cast iron cookware in the oven at 200 - 250 F for 10 - 15 minutes. This allows the pores to open up.</li>
+            <li>Take out your cookware with a hot pad and melt a small amount of BuzzyWaxx seasoning on the surface. Grab a lint-free cloth and rub the seasoning into the surface until the entire surface is coated in a thin layer of seasoning.</li>
+            <li>Put your cast iron back into the oven while you season the rest of your pans or for about 10 minutes. This allows for the seasoning to really soak into the pores of the iron.</li>
+            <li>Take another lint-free cloth and buff the entire surface of the cookware until there is no more seasoning on the surface. This may seem counter-intuitive, but enough seasoning soaked into the iron to season the cookware.</li>
+            <li>Put cookware in an oven preheated to 500 F for 1 hour. Don’t be alarmed if you smell smoke or see smoke coming out of your oven. This is the seasoning adhering to the surface of your cookware. This is what gives the seasoning a patine
+              black look.</li>
+            <li>After 1 hour, turn oven off and let the cookware cook naturally. This usually takes a couple of hours. I prefer to do this overnight.</li>
+            <li>Repeat 2 - 3 times. Each time the seasoning will get better and better.</li>
+          </ol>
         </div>
       </div>
     </div>
