--- a/pages/cookware/accessories.html
+++ b/pages/cookware/accessories.html
@@ -75,7 +75,8 @@
             Scrubbing Pad
           </div>
           <div class="main-content-item-text">
-            test
+            <span>The Chainmail Scrubbing Pad has stainless steel chainmail rings that create a textured surface, ideal for heavy-duty cleaning. This will get any stuck-on food right off without damaging your seasoning or your cast iron cookeware.
+              The dishwasher-safe tool requires minimal storage space and will last a lifetime. </span>
           </div>
         </div>
       </div>
@@ -88,7 +89,9 @@
             Scrub Brush
           </div>
           <div class="main-content-item-text">
-            test
+            <span>This Scrub Brush makes short work of cleaning your cast iron or enamel cookware. The rubber wood handle with a natural lacquer finish has an ergonomic design for greater comfort. Effortlessly clean seasoned cast iron without harming
+              the seasoning, thanks to the dense bristles. Use it for everyday cleaning. Just don’t put it in the dishwasher.
+            </span>
           </div>
         </div>
       </div>
@@ -101,7 +104,9 @@
             BuzzyWaxx Seasoning
           </div>
           <div class="main-content-item-text">
-            test
+            <span>By far the best seasoning I’ve ever tried. It’s super easy to season and it seasons any cast iron cookware extremely well. This product mixes two amazing oils with high smoke points and Beeswax to bond everything together. Grapeseed
+              is known for it's beautiful color content on cast iron, Canola gives one of the best slickness to cast iron of any oil. So combining the two with having the same smoke point, you get an amazing seasoning. Beeswax has been used on cast
+              Iron for hundreds of years. Some folks use it alone, but by combining two high smoke point oils to the mixture at the right amount, your cast iron will be dark, stick free and great for cooking time and time again.</span>
           </div>
         </div>
       </div>
