--- a/pages/cookware/dutch-ovens.html
+++ b/pages/cookware/dutch-ovens.html
@@ -74,7 +74,8 @@
             Oven Dutch Oven
           </div>
           <div class="main-content-item-text">
-            test
+            <span>A dutch oven should be a staple in every household. Ideal for slow cooking foods, making cobblers, and soufflés, Dutch ovens provide excellent heat distribution and retention for consistent, even cooking. The cover features
+              self-basting tips to recirculate moisture as your food cooks. Perfect for cooking bread, or roasting some beef. Easily move around your kitchen with the dual handle design. Seasoned and ready to use.</span>
           </div>
         </div>
       </div>
@@ -87,7 +88,9 @@
             Enameled Dutch Oven
           </div>
           <div class="main-content-item-text">
-            test
+            <span>From weeknight dinners to soups and chili, Enameled Dutch Ovens are a must-have for every home cook. These Dutch ovens have matte enamel rims, its cooking surface is beige enamel, and the smooth glass surface won't react to
+              ingredients. Use it to broil, braise, bake, or roast in the oven up to 500° F, and sauté, simmer, or fry on any stovetop, as well as to marinate and refrigerate food. Easy to clean, and beautiful on the stove top.
+            </span>
           </div>
         </div>
       </div>
@@ -100,7 +103,8 @@
             Camping Dutch Oven
           </div>
           <div class="main-content-item-text">
-            test
+            <span>Camping dutch ovens are so much fun to take outdoors. Cook breakfast, lunch, dinner or dessert in there. Perfect for cobbler, or a mountain-man’s breakfast.Cook for a crowd at your next campsite with the Deep Camp Dutch Oven. The
+              flanged lid holds hot coals and inverts for use as a griddle. Need high heat? Situate the Dutch oven perfectly over hot coals, thanks to the integral legs. For slow cooked meals, hang the bail handle over a tripod.</span>
           </div>
         </div>
       </div>
