--- a/pages/cookware/skillets-pans.html
+++ b/pages/cookware/skillets-pans.html
@@ -75,7 +75,10 @@
             Classic Skillets
           </div>
           <div class="main-content-item-text">
-            test
+            <span>Hailed as an "essential kitchen tool" (Martha Stewart 2008), the Classic Cast Iron Skillet will be your favorite go-to skillet for years to come. Featuring both an assist handle and an easy-grip handle for great control and hanging
+              storage when not in use, it provides excellent heat distribution and retention for consistent, even cooking. Use this to cook memorable meals for generations. Seasoned and ready to use. Comes in various sizes. The 10.25” is the classic,
+              but 5” in perfect for a personal cookie.
+            </span>
           </div>
         </div>
       </div>
@@ -88,7 +91,8 @@
             Grill Pans
           </div>
           <div class="main-content-item-text">
-            test
+            <span>A grill pan is great for mimicking an outdoor grill. The fat has room to drip off and the ribbed surface leaves tantalizing grill marks on your food. Great for cooking barbecue chicken or roasting vegetables. Featuring both an
+              assist handle and an easy-grip handle for great control and hanging storage, it provides excellent heat distribution and retention for consistent, even cooking. Seasoned and ready to use.</span>
           </div>
         </div>
       </div>
@@ -98,10 +102,11 @@
         </div>
         <div class="main-content-item">
           <div class="main-content-item-header">
-            Dual Handed Pans
+            Dual-Handled Pans
           </div>
           <div class="main-content-item-text">
-            test
+            <span>Dual-handled pans come in various shapes and sizes. They can be used for the grill or for your oven. With two handles, you can easily lift, store, and maneuver around your kitchen. My favorite dual-handled pans are this fish pan, or
+              the 17” round dual-handled pan. You can cook chicken, sweet potatoes, lasagna, or pies in these. Use to sear, sauté, bake, broil, braise, fry, or grill.</span>
           </div>
         </div>
       </div>
